added contact page and did some minor styling for this page.

--- a/blog-page.html
+++ b/blog-page.html
@@ -25,7 +25,8 @@
       <ul class="main-nav">
         <li><a href="index.html">Home</a></li>/
         <li><a href="dog-page.html">Dogs</a></li>/
-        <li><a href="blog-page.html">Blog</a></li>
+        <li><a href="blog-page.html">Blog</a></li>/
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
     <main>
@@ -96,6 +97,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="dog-page.html">Dogs</a></li>
           <li><a href="blog-page.html">Blog</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
       <address>address info</address>
