--- a/contact.html
+++ b/contact.html
@@ -29,57 +29,52 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <main>
-      <h2>Checkout</h2>
+    <main class="contact-main-content">
+      <h2>Contact Us!</h2>
       <form method="GET">
-        <label class="name-address">Name
-          <input type="text" name="fullName" placeholder="">
+        <label class="name-address">Name:
+          <input type="text" name="fullName" placeholder="Full Name" required>
         </label>
-        <label class="name-address">Email Address
-          <input type="email" name="emailAddress" placeholder="">
+        <label class="name-address">Email Address:
+          <input type="email" name="emailAddress" placeholder="example@example.com" required>
         </label>
-        <label class="name-address">Street Address
-          <input type="text" name="street-address">
+        <label class="name-address">City:
+          <input type="text" name="city" placeholder="Seattle">
         </label>
-        <label class="name-address">City
-          <input type="text" name="city">
+        <label class="name-address">State:
+          <input type="text" name="state" placeholder="WA">
         </label>
-        <label class="name-address">State
-          <input type="text" name="state">
+        <br>
+        <label for="aboutYourself" class="about-yourself">
+          Tell us about yourself:
         </label>
-        <label class="name-address">Zip Code
-          <input type="text" name="zip-code">
-        </label>
+        <textarea name="aboutYourself" rows="6" cols="60" id="aboutYourself" placeholder="Start typing here"></textarea>
+        <br><br>
         <fieldset class="first-time">
           <legend>First time adopter?</legend>
           <label>
-            <input type="radio" name="first-time" value="yes">
+            <input type="radio" name="firstTime" value="yes" required>
             Yes
           </label>
           <label>
-            <input type="radio" name="first-time" value="No">
+            <input type="radio" name="firstTime" value="No" required>
             No
           </label> 
-        </fieldset>        
-        <label class="pickup-location">Pickup Location
-          <select name="pickup-location">
+        </fieldset>    
+        <br>    
+        <label for="pickupLocation" class="pickup-location">Pickup Location</label>
+          <select name="pickup-location" id="pickupLocation">
             <option value="">(select one)</option>
             <option value="seattle">Seattle</option>
             <option value="bellevue">Bellevue</option>
             <option value="everett">Everett</option>
             <option value="tacoma">Tacoma</option>
-          </select>
-        </label> 
-        <div>
-          <h3>Dogs Adopted</h3>
-          <div>dog 1</div>
-          <div>dog 2</div>
+          </select> 
+          <br><br>
+        <div class="form-buttons">
+          <input class="submit-button" type="submit" value="Submit!"></input>
+          <input class="reset-button" type="reset" name="reset">
         </div>
-        <div>
-          <h3>Total Adoption Cost</h3>
-          <p>$$$</p>
-        </div>
-        <input type="submit" value="Submit!"></input>
       </form>
     </main>
     <footer>
