--- a/dog-page.html
+++ b/dog-page.html
@@ -25,133 +25,134 @@
       <ul class="main-nav">
         <li><a href="index.html">Home</a></li>/
         <li><a href="dog-page.html">Dogs</a></li>/
-        <li><a href="blog-page.html">Blog</a></li>
+        <li><a href="blog-page.html">Blog</a></li>/
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
     <main>
-        <h2>Here are all of our Dogs!</h2>
-        <div class="dog-list-container">
-          <article class="dog-box">
-            <img class="dog-profile-photo" src="images/angus-card.jpg" alt="missing image">
-            <h3>Name of dog</h3>
-            <p>Cost to adopt: $123.45</p>
-            <p>
-              This dog smells like goat cheese and fresh pineapples. Do you think
-              this is the one? Adopt this dog now!
-            </p>
-            <button>Adopt</button>
-          </article>
-          <article class="dog-box">
-            <img class="dog-profile-photo" src="images/duffy-card.jpg" alt="missing image">
-            <h3>Name of dog</h3>
-            <p>Cost to adopt: $123.45</p>
-            <p>
-              This dog smells like goat cheese and fresh pineapples. Do you think
-              this is the one? Adopt this dog now!
-            </p>
-            <button>Adopt</button>
-          </article>
-          <article class="dog-box">
-            <img class="dog-profile-photo" src="images/jack-card.jpg" alt="missing image">
-            <h3>Name of dog</h3>
-            <p>Cost to adopt: $123.45</p>
-            <p>
-              This dog smells like goat cheese and fresh pineapples. Do you think
-              this is the one? Adopt this dog now!
-            </p>
-            <button>Adopt</button>
-          </article>
-          <article class="dog-box">
-            <img class="dog-profile-photo" src="images/jake-card.jpg" alt="missing image">
-            <h3>Name of dog</h3>
-            <p>Cost to adopt: $123.45</p>
-            <p>
-              This dog smells like goat cheese and fresh pineapples. Do you think
-              this is the one? Adopt this dog now!
-            </p>
-            <button>Adopt</button>
-          </article>
-          <article class="dog-box">
-            <img class="dog-profile-photo" src="images/lucas-card.jpg" alt="missing image">
-            <h3>Name of dog</h3>
-            <p>Cost to adopt: $123.45</p>
-            <p>
-              This dog smells like goat cheese and fresh pineapples. Do you think
-              this is the one? Adopt this dog now!
-            </p>
-            <button>Adopt</button>
-          </article>
-          <article class="dog-box">
-            <img class="dog-profile-photo" src="images/luna-card.jpg" alt="missing image">
-            <h3>Name of dog</h3>
-            <p>Cost to adopt: $123.45</p>
-            <p>
-              This dog smells like goat cheese and fresh pineapples. Do you think
-              this is the one? Adopt this dog now!
-            </p>
-            <button>Adopt</button>
-          </article>
-          <article class="dog-box">
-            <img class="dog-profile-photo" src="images/maximus-card.jpg" alt="missing image">
-            <h3>Name of dog</h3>
-            <p>Cost to adopt: $123.45</p>
-            <p>
-              This dog smells like goat cheese and fresh pineapples. Do you think
-              this is the one? Adopt this dog now!
-            </p>
-            <button>Adopt</button>
-          </article>
-          <article class="dog-box">
-            <img class="dog-profile-photo" src="images/murphy-card.jpg" alt="missing image">
-            <h3>Name of dog</h3>
-            <p>Cost to adopt: $123.45</p>
-            <p>
-              This dog smells like goat cheese and fresh pineapples. Do you think
-              this is the one? Adopt this dog now!
-            </p>
-            <button>Adopt</button>
-          </article>
-          <article class="dog-box">
-            <img class="dog-profile-photo" src="images/piper-card.jpg" alt="missing image">
-            <h3>Name of dog</h3>
-            <p>Cost to adopt: $123.45</p>
-            <p>
-              This dog smells like goat cheese and fresh pineapples. Do you think
-              this is the one? Adopt this dog now!
-            </p>
-            <button>Adopt</button>
-          </article>
-          <article class="dog-box">
-            <img class="dog-profile-photo" src="images/poppy-card.jpg" alt="missing image">
-            <h3>Name of dog</h3>
-            <p>Cost to adopt: $123.45</p>
-            <p>
-              This dog smells like goat cheese and fresh pineapples. Do you think
-              this is the one? Adopt this dog now!
-            </p>
-            <button>Adopt</button>
-          </article>
-          <article class="dog-box">
-            <img class="dog-profile-photo" src="images/stella-card.jpg" alt="missing image">
-            <h3>Name of dog</h3>
-            <p>Cost to adopt: $123.45</p>
-            <p>
-              This dog smells like goat cheese and fresh pineapples. Do you think
-              this is the one? Adopt this dog now!
-            </p>
-            <button>Adopt</button>
-          </article>
-          <article class="dog-box">
-            <img class="dog-profile-photo" src="images/violet-card.jpg" alt="missing image">
-            <h3>Name of dog</h3>
-            <p>Cost to adopt: $123.45</p>
-            <p>
-              This dog smells like goat cheese and fresh pineapples. Do you think
-              this is the one? Adopt this dog now!
-            </p>
-            <button>Adopt</button>
-          </article>
-        </div>
+      <h2>Here are all of our Dogs!</h2>
+      <div class="dog-list-container">
+        <article class="dog-box">
+          <img class="dog-profile-photo" src="images/angus-card.jpg" alt="missing image">
+          <h3>Name of dog</h3>
+          <p>Cost to adopt: $123.45</p>
+          <p>
+            This dog smells like goat cheese and fresh pineapples. Do you think
+            this is the one? Adopt this dog now!
+          </p>
+          <button>Adopt</button>
+        </article>
+        <article class="dog-box">
+          <img class="dog-profile-photo" src="images/duffy-card.jpg" alt="missing image">
+          <h3>Name of dog</h3>
+          <p>Cost to adopt: $123.45</p>
+          <p>
+            This dog smells like goat cheese and fresh pineapples. Do you think
+            this is the one? Adopt this dog now!
+          </p>
+          <button>Adopt</button>
+        </article>
+        <article class="dog-box">
+          <img class="dog-profile-photo" src="images/jack-card.jpg" alt="missing image">
+          <h3>Name of dog</h3>
+          <p>Cost to adopt: $123.45</p>
+          <p>
+            This dog smells like goat cheese and fresh pineapples. Do you think
+            this is the one? Adopt this dog now!
+          </p>
+          <button>Adopt</button>
+        </article>
+        <article class="dog-box">
+          <img class="dog-profile-photo" src="images/jake-card.jpg" alt="missing image">
+          <h3>Name of dog</h3>
+          <p>Cost to adopt: $123.45</p>
+          <p>
+            This dog smells like goat cheese and fresh pineapples. Do you think
+            this is the one? Adopt this dog now!
+          </p>
+          <button>Adopt</button>
+        </article>
+        <article class="dog-box">
+          <img class="dog-profile-photo" src="images/lucas-card.jpg" alt="missing image">
+          <h3>Name of dog</h3>
+          <p>Cost to adopt: $123.45</p>
+          <p>
+            This dog smells like goat cheese and fresh pineapples. Do you think
+            this is the one? Adopt this dog now!
+          </p>
+          <button>Adopt</button>
+        </article>
+        <article class="dog-box">
+          <img class="dog-profile-photo" src="images/luna-card.jpg" alt="missing image">
+          <h3>Name of dog</h3>
+          <p>Cost to adopt: $123.45</p>
+          <p>
+            This dog smells like goat cheese and fresh pineapples. Do you think
+            this is the one? Adopt this dog now!
+          </p>
+          <button>Adopt</button>
+        </article>
+        <article class="dog-box">
+          <img class="dog-profile-photo" src="images/maximus-card.jpg" alt="missing image">
+          <h3>Name of dog</h3>
+          <p>Cost to adopt: $123.45</p>
+          <p>
+            This dog smells like goat cheese and fresh pineapples. Do you think
+            this is the one? Adopt this dog now!
+          </p>
+          <button>Adopt</button>
+        </article>
+        <article class="dog-box">
+          <img class="dog-profile-photo" src="images/murphy-card.jpg" alt="missing image">
+          <h3>Name of dog</h3>
+          <p>Cost to adopt: $123.45</p>
+          <p>
+            This dog smells like goat cheese and fresh pineapples. Do you think
+            this is the one? Adopt this dog now!
+          </p>
+          <button>Adopt</button>
+        </article>
+        <article class="dog-box">
+          <img class="dog-profile-photo" src="images/piper-card.jpg" alt="missing image">
+          <h3>Name of dog</h3>
+          <p>Cost to adopt: $123.45</p>
+          <p>
+            This dog smells like goat cheese and fresh pineapples. Do you think
+            this is the one? Adopt this dog now!
+          </p>
+          <button>Adopt</button>
+        </article>
+        <article class="dog-box">
+          <img class="dog-profile-photo" src="images/poppy-card.jpg" alt="missing image">
+          <h3>Name of dog</h3>
+          <p>Cost to adopt: $123.45</p>
+          <p>
+            This dog smells like goat cheese and fresh pineapples. Do you think
+            this is the one? Adopt this dog now!
+          </p>
+          <button>Adopt</button>
+        </article>
+        <article class="dog-box">
+          <img class="dog-profile-photo" src="images/stella-card.jpg" alt="missing image">
+          <h3>Name of dog</h3>
+          <p>Cost to adopt: $123.45</p>
+          <p>
+            This dog smells like goat cheese and fresh pineapples. Do you think
+            this is the one? Adopt this dog now!
+          </p>
+          <button>Adopt</button>
+        </article>
+        <article class="dog-box">
+          <img class="dog-profile-photo" src="images/violet-card.jpg" alt="missing image">
+          <h3>Name of dog</h3>
+          <p>Cost to adopt: $123.45</p>
+          <p>
+            This dog smells like goat cheese and fresh pineapples. Do you think
+            this is the one? Adopt this dog now!
+          </p>
+          <button>Adopt</button>
+        </article>
+      </div>
     </main>
     <footer>
       <img class="adoptadog-logo-footer" src="images/adoptadog-logo.svg" alt="adopt a dog logo">
@@ -164,6 +165,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="dog-page.html">Dogs</a></li>
           <li><a href="blog-page.html">Blog</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
       <address>address info</address>
