--- a/index.html
+++ b/index.html
@@ -7,27 +7,28 @@
     <title>Adopt-a-Dog Homepage</title>
   </head>
   <body>
-      <header class="header-banner">
-        <div>
-          <img class="adoptadog-logo-header" src="images/adoptadog-logo.svg" alt="adopt a dog logo">
-          <h2>Seattle's premiere dog adoption agency</h2>
-        </div>
-        <aside>
-          <nav class="cart">
-            <img class="cart-icon" src="images/cart-icon.svg" alt="cart icon"> 
-            <form  action="checkout-page.html">
-              <input class="checkout-button" type="submit" value="Checkout">
-            </form>
-          </nav>
-        </aside>
-      </header>
-      <nav>
-        <ul class="main-nav">
-          <li><a href="index.html">Home</a></li>/
-          <li><a href="dog-page.html">Dogs</a></li>/
-          <li><a href="blog-page.html">Blog</a></li>
-        </ul>
-      </nav>
+    <header class="header-banner">
+      <div>
+        <img class="adoptadog-logo-header" src="images/adoptadog-logo.svg" alt="adopt a dog logo">
+        <h2>Seattle's premiere dog adoption agency</h2>
+      </div>
+      <aside>
+        <nav class="cart">
+          <img class="cart-icon" src="images/cart-icon.svg" alt="cart icon"> 
+          <form  action="checkout-page.html">
+            <input class="checkout-button" type="submit" value="Checkout">
+          </form>
+        </nav>
+      </aside>
+    </header>
+    <nav>
+      <ul class="main-nav">
+        <li><a href="index.html">Home</a></li>/
+        <li><a href="dog-page.html">Dogs</a></li>/
+        <li><a href="blog-page.html">Blog</a></li>/
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
     <main>
       <article class="intro-container">
         <img class="intro-photo" src="images/home-intro.jpg" alt="Article image">
@@ -134,6 +135,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="dog-page.html">Dogs</a></li>
           <li><a href="blog-page.html">Blog</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
       <address>address info</address>
