completed assignment 7. Added alert to contact page with console log of entries. Added dynamic loading of blog page for blog items and made sure the functions created a layout that matched the current CSS styling for this page.

--- a/blog-page.html
+++ b/blog-page.html
@@ -10,7 +10,7 @@
     <header class="header-banner">
       <div>
         <img class="adoptadog-logo-header" src="images/adoptadog-logo.svg" alt="adopt a dog logo">
-        <h2>Seattle's premiere dog adoption agency</h2>
+        <h1>Seattle's premiere dog adoption agency</h1>
       </div>
       <aside>
         <nav class="cart">
@@ -30,8 +30,7 @@
       </ul>
     </nav>
     <main>
-        <h2>Adopt-a-Dog Blog</h2>
-        <article class="blog-container">
+        <!-- <article class="blog-container">
           <img class="blog-photo" src="images/blog-1.jpg" alt="back of black dog and human sitting on the edge of the grand canyon">
           <div class="blog-text-box">  
             <h3>Traveling With Your Dog</h3>
@@ -83,8 +82,11 @@
               Tom realized he could be making a big mistake.
               He had a dream so real that he woke screaming.
             </p>
-          </div>
-        </article>
+          </div> 
+        </article> -->
+      <div class="dynamic-blog-posts" id="blog-posts">
+        <h2 class="blog-title">Adopt-a-Dog Blog</h2>
+      </div>
     </main>
     <footer>
       <img class="adoptadog-logo-footer" src="images/adoptadog-logo.svg" alt="adopt a dog logo">
@@ -102,4 +104,5 @@
       </nav>
       <address>address info</address>
     </footer>
+    <script src="js/adopt-a-dog.js" charset="UTF-8"></script>
   </body>
