--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/styles.css">
-    <title>Adopt-a-Dog Checkout</title>
+    <title>Adopt-a-Dog Contact Form</title>
   </head>
   <body>
     <header class="header-banner">
@@ -31,7 +31,7 @@
     </nav>
     <main class="contact-main-content">
       <h2>Contact Us!</h2>
-      <form method="GET">
+      <form id="contactSubmit" method="GET">
         <label class="name-address">Name:
           <input type="text" name="fullName" placeholder="Full Name" required>
         </label>
@@ -93,4 +93,5 @@
       </nav>
       <address>address info</address>
     </footer>
+    <script src="js/contact.js" charset="UTF-8"></script>
   </body>
